# smallDatabase

./: Add.cpp  Add.h  CMakeCache.txt  CMakeLists.txt  FileOperations.cpp  FileOperations.h  Getchar.h  Makefile  Menu.cpp  Menu.h  Osoba.cpp  Osoba.h  Person.cpp  Person.h  README.md  Remove.cpp  Remove.h  Search.cpp  Search.h  Show.cpp  Show.h  base.txt  baza.txt  boost.tpp  cmake_install.cmake  main.cpp  smallDatabase
